  - Default HTTP headers to protect against MIME-sniffing, force https if enabled
  - Bootstrap 3 with responsive UI
  - New repository download formats: tar.bz2, zip, tar (Jason Hollingsworth)
  - Restyled accept widgets for MR
  - SCSS refactored
  - Use jquery timeago plugin
  - Fix 500 error for rdoc files
  - Ability to customize merge commit message (sponsored by Say Media)

v6.4.3
  - Don't use unicorn worker killer if PhusionPassenger is defined

v6.4.2
  - Fixed wrong behaviour of script/upgrade.rb

v6.4.1 
  - Fixed bug with repository rename
  - Fixed bug with project transfer

v 6.4.0
  - Added sorting to project issues page (Jason Blanchard)
  - Assembla integration (Carlos Paramio)
  - Fixed another 500 error with submodules
  - UI: More compact issues page
  - Minimal password length increased to 8 symbols
  - Side-by-side diff view (Steven Thonus)
  - Internal projects (Jason Hollingsworth)
  - Allow removal of avatar (Drew Blessing)
  - Project web hooks now support issues and merge request events
  - Visiting project page while not logged in will redirect to sign-in instead of 404 (Jason Hollingsworth)
  - Expire event cache on avatar creation/removal (Drew Blessing)
  - Archiving old projects (Steven Thonus)
  - Rails 4
  - Add time ago tooltips to show actual date/time
  - UI: Fixed UI for admin system hooks
  - Ruby script for easier GitLab upgrade
  - Do not remove Merge requests if fork project was removed
  - Improve sign-in/signup UX
  - Add resend confirmation link to sign-in page
  - Set noreply@HOSTNAME for reply_to field in all emails
  - Show GitLab API version on Admin#dashboard
  - API Cross-origin resource sharing
  - Show READMe link at project home page
  - Show repo size for projects in Admin area

v 6.3.0
  - API for adding gitlab-ci service
  - Init script now waits for pids to appear after (re)starting before reporting status (Rovanion Luckey)
  - Restyle project home page
  - Grammar fixes