@@ -47,6 +47,9 @@
         = f.label :twitter, class: "control-label"
         .col-sm-10= f.text_field :twitter, class: "form-control"
       .form-group
+        = f.label :website_url, class: "control-label"
+        .col-sm-10= f.text_field :website_url, class: "form-control"
+      .form-group
         = f.label :bio, class: "control-label"
         .col-sm-10
           = f.text_area :bio, rows: 6, class: "form-control", maxlength: 250
