@@ -17,6 +17,10 @@
       %li
         %span.light Twitter:
         %strong= link_to user.twitter, "http://www.twitter.com/#{user.twitter}"
+    - unless user.website_url.blank?
+      %li
+        %span.light Website url:
+        %strong= link_to user.short_website_url, user.full_website_url
     - unless user.bio.blank?
       %li
         %span.light Bio:
